--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.3"
 
 services:
     glpidb:
@@ -9,7 +9,7 @@ services:
             - admin-db
         volumes:
             - glpi_database:/var/lib/mysql # CHANGE
-            - .\glpidb\scripts:/scripts
+            - ./glpidb/scripts:/scripts
         command: mysqld --default-authentication-plugin=mysql_native_password
         secrets:
             - MYSQL_DATABASE
@@ -17,7 +17,7 @@ services:
             - MYSQL_USER
             - MYSQL_PASSWORD
         environment:
-            - TZ='Africa/Algiers' # CHANGE
+            - TZ=Africa/Algiers # CHANGE
             - MYSQL_DATABASE_FILE=/run/secrets/MYSQL_DATABASE
             - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/MYSQL_ROOT_PASSWORD
             - MYSQL_USER_FILE=/run/secrets/MYSQL_USER
@@ -44,7 +44,7 @@ services:
         ports:
             - 50080:80 # CHANGE
         volumes:
-            - .\glpi\scripts:/scripts
+            - ./glpi/scripts:/scripts
         secrets:
             - DB_SERVER
             - MYSQL_DATABASE
@@ -52,7 +52,7 @@ services:
             - MYSQL_PASSWORD
         environment:
             - GLPI_ROOT_PATH=/var/www/html
-            - TZ='Africa/Algiers' # CHANGE
+            - TZ=Africa/Algiers # CHANGE
             - MYSQL_DATABASE_FILE=/run/secrets/MYSQL_DATABASE
             - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/MYSQL_ROOT_PASSWORD
             - MYSQL_USER_FILE=/run/secrets/MYSQL_USER
@@ -69,7 +69,7 @@ services:
         secrets:
             - DB_SERVER
         environment:
-            - TZ='Africa/Algiers' # CHANGE
+            - TZ=Africa/Algiers # CHANGE
             - PMA_HOST_FILE=/run/secrets/DB_SERVER
 
 networks:
