--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ version: "3.3"
 # -----------------------------------------------------------------------------
 
 services:
-    glpidb:
+    db:
         image: mysql:8.0.26
         restart: always
         networks:
             - web-db
             - admin-db
         volumes:
-            - glpi_database:/var/lib/mysql # CHANGE
+            - database:/var/lib/mysql # CHANGE
             - ./glpidb/scripts:/scripts
         command: mysqld --default-authentication-plugin=mysql_native_password
         secrets:
@@ -34,8 +34,8 @@ services:
             timeout: 10s
             retries: 10
 
-    glpi:
-        image: my_glpi # CHANGE
+    web:
+        image: glpi # CHANGE
         build:
             context: ./glpi
             dockerfile: dockerfile
@@ -44,7 +44,7 @@ services:
         networks:
             - web-db
         depends_on:
-            - glpidb
+            - db
         ports:
             - 50080:80 # CHANGE
         volumes:
@@ -66,7 +66,7 @@ services:
     phpmyadmin:
         image: phpmyadmin:5.0-apache
         depends_on:
-            - glpidb
+            - db
         ports:
             - 50180:80 # CHANGE
         networks:
@@ -76,14 +76,14 @@ services:
         environment:
             - TZ=Africa/Algiers # CHANGE
             - PMA_HOST_FILE=/run/secrets/DB_SERVER
-            - UPLOAD_LIMIT=300M
+            - UPLOAD_LIMIT=300M # CHANGE
 
 networks:
     web-db:
     admin-db:
 
 volumes:
-    glpi_database: # CHANGE
+    database: # CHANGE
 
 secrets:
     DB_SERVER:
